--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "latwebsocket",
+    "name": "aplikasichat",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
+        "start": "node index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "masdikdok",
